<resources>
    <string name="app_name">NF</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="next">Lanjutkan</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="ipsum_lorem">Ipsum Lorem</string>
    <string name="onBoarding_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="onBoarding_2">Lorem dolor ipsum amet sit, consectetur adipiscing elit.</string>
    <string name="genre">Genre apa yang kamu sukai?</string>
    <string name="ex">contoh: Action</string>
    <string name="note">Note</string>
    <string name="prev">Kembali</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre_text">Kamu lebih suka Genre</string>
    <string name="question_1">Kamu lebih suka genre atau country?</string>
    <string name="question_2">Kamu lebih suka genre atau popularity?</string>
    <string name="question_3">Kamu lebih suka genre atau category?</string>
    <string name="question_4">Kamu lebih suka genre atau vote?</string>
    <string name="question_5">Kamu lebih suka genre atau rating?</string>
    <string name="question_6">Kamu lebih suka country atau popularity?</string>
    <string name="question_7">Kamu lebih suka country atau category?</string>
    <string name="question_8">Kamu lebih suka country atau vote?</string>
    <string name="question_9">Kamu lebih suka country atau rating?</string>
    <string name="question_10">Kamu lebih suka popularity atau category?</string>
    <string name="question_11">Kamu lebih suka popularity atau vote?</string>
    <string name="question_12">Kamu lebih suka popularity atau ratting?</string>
    <string name="question_13">Kamu lebih suka category atau vote?</string>
    <string name="question_14">Kamu lebih suka category atau rating?</string>
    <string name="question_15">Kamu lebih suka popularity atau rating?</string>
    <string name="giving_integrity">Kasih bobotnya</string>
    <string name="results">Hasil</string>
    <string name="title">Title</string>
    <string name="genres">Genres</string>
</resources>