<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/slider_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_onboarding_1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/title_grammar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="24sp"
            android:textColor="@color/darkenBlue"/>

        <TextView
            android:id="@+id/slider_grammar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_grammar"
            android:layout_marginTop="5dp"
            android:text="@string/onBoarding_1"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textColor="@color/darkBlue"/>

    </RelativeLayout>

</LinearLayout>