<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="44dp"
    android:paddingLeft="57dp"
    android:paddingRight="57dp"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/email"
        android:textColor="@color/light_semi_boldText"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_bg"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="17dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:textColor="@color/light_regularText"
        android:textColorHint="@color/light_regularText"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/password"
        android:textColor="@color/light_semi_boldText"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_bg"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="17dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:textColor="@color/light_regularText"
        android:textColorHint="@color/light_regularText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/lightMainBg"
        android:textSize="20sp" />

</LinearLayout>