<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainPage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background_style">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="20sp"
                android:textColor="@color/darkenBlue"
                android:text="@string/genre"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@+id/question"
                android:background="@drawable/field_shape"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingStart="17dp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/darkBlue"
                android:textColorHint="@color/darkBlue"
                android:textSize="15sp"
                android:hint="@string/ex"/>

            <Button
                android:id="@+id/nextToCriteria"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/genre"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>